wordpress-persistent-disks/nginx-ingress/wordpress-service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: wordpress
  type: NodePort
  selector:
    app: wordpress
